# EigenScript

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONSISTENCY_REPORT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  IMPROVEMENT_ROADMAP.md  INVESTIGATION_SUMMARY.md  ISSUE_REPORT.md  KNOWN_ISSUES.md  LICENSE  Makefile  PHASE3_COMPLETION_STATUS.md  QUICK_FIXES.md  README.md  REVIEW_SUMMARY.md  ROADMAP.md  SECURITY.md  TEST_RESULTS.md  build.sh  builtins.c.gcov  index.html  install.sh  mkdocs.yml  parser.c.gcov  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  repository-metadata.yml
COMPILER_SELF_HOSTING/: index.html
CONTINUE_STATEMENT_PROPOSAL/: index.html
ISSUE_REPORT/: index.html
KNOWN_ISSUES/: index.html
PHASE5_INDEX/: index.html
PHASE5_INTERACTIVE_PLAYGROUND_ROADMAP/: index.html
PHASE5_PROGRESS_TRACKER/: index.html
PHASE5_QUICK_START_GUIDE/: index.html
QUICK_FIXES/: index.html
SELF_HOSTING_QUICKSTART/: index.html
STYLE_GUIDE/: index.html
TEST_RESULTS/: index.html
api/: index.html
architecture/: index.html
archive/: index.html
bench/: baseline.txt  check_regression.sh  dict_ops.eigs  observed_loop.eigs  run_bench.sh  scalar_loop.eigs  string_build.eigs  unobserved_loop.eigs
benchmarks/: README.md  factorial_bench.eigs  fibonacci_bench.eigs  list_operations_bench.eigs  loop_bench.eigs  math_bench.eigs
contributing/: index.html
docs/: ARCHITECTURE.md  BOOTSTRAP_INDEX.md  BOOTSTRAP_INVESTIGATION_CHECKLIST.md  BUILTINS.md  BUNDLE.md  CLOSURE_CYCLE_GC.md  COMPARISON.md  COMPILER_SELF_HOSTING.md  CONCURRENCY.md  CONTINUE_STATEMENT_PROPOSAL.md  DEBUGGING.md  DIAGNOSTICS.md  EMBEDDING.md  FREESTANDING.md  GAP_ANALYSIS.md  GRAMMAR.md  ISSUE_REPORT.md  JIT_STAGE5_INLINE_IC.md  KNOWN_ISSUES.md  LANGUAGE_CONTRACT.md  OBSERVER.md  PACKAGE_DESIGN.md  PACKAGE_SPEC.md  PERFORMANCE.md  PHASE5_INDEX.md  PHASE5_INTERACTIVE_PLAYGROUND_ROADMAP.md  PHASE5_PROGRESS_TRACKER.md  PHASE5_QUICK_START_GUIDE.md  PREDICATES.md  README.md  SELF_HOSTING_QUICKSTART.md  SPEC.md  STDLIB.md  STYLE_GUIDE.md  SYNTAX.md  TRACE.md  architecture.md  contributing.md  eigencontrol_algorithm.md  eigenfunction_analysis.md  (+17 more)
eigencontrol_algorithm/: index.html
eigenfunction_analysis/: index.html
examples/: .gitkeep  (+84 more)
(+833 files in other folders)
