[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigenscript"
version = "0.3.0"
description = "A high-performance geometric programming language with native compilation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "J. McReynolds", email = "inauguralphysicist@gmail.com"}
]
keywords = ["programming-language", "geometric", "lrvm", "consciousness", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "typing-extensions>=4.7.0",
]
compiler = [
    "llvmlite>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/InauguralPhysicist/eigenscript"
Documentation = "https://github.com/InauguralPhysicist/eigenscript/docs"
Repository = "https://github.com/InauguralPhysicist/eigenscript"
Issues = "https://github.com/InauguralPhysicist/eigenscript/issues"

[project.scripts]
eigenscript = "eigenscript.__main__:main"
eigenscript-compile = "eigenscript.compiler.cli.compile:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=eigenscript --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src/eigenscript"]

[tool.coverage.run]
source = ["src/eigenscript"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
